fix [#37250] dynotopo initial triangulation

hmrf arguments order was wrong ... but int/bool casting made it pass
through the compiler